--- a/templates/head.html
+++ b/templates/head.html
@@ -1,4 +1,26 @@
+<!--include로 다른 파일로 head 만들 것임-->
+
+
+{% load static %}
+
 <head>
     <meta charset="UTF-8">
     <title>Pragmatic</title>
+
+    <!--BootStrap으로 CSS 갖고 옴-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
+
+    <!--Google Fonts Links-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
+    <!--DEFAULT CSS LINK-->
+
+    <!--base.csss에 해당하는 경로를 rendering하여 브랑저에 넘기고, text/css파일을 template에서 사용 가능 하게 됨-->
+    <link rel="stylesheet" type="text/css" href="{% static 'base.css'%}">
+
+
 </head>
