--- a/templates/header.html
+++ b/templates/header.html
@@ -8,7 +8,17 @@
             <span>nav1</span>
             <span>nav2</span>
             <span>nav3</span>
-            <span>nav4</span>
+            <!--로그인이 되어 있는 경우와 로그인 안 되어있는 경우-->
+            <!--get방식으로 next의 값을 넘김. 즉, 로그인 또는 로그아웃 후에 다시 넘어갈 경로를 넘김-->
+            {% if not user.is_authenticated %}
+            <a href="{% url 'accountapp:login' %}?next={{ request.path }}">
+                <span>login</span>
+            </a>
+            {% else %}
+            <a href="{% url 'accountapp:logout' %}?next={{ request.path }}">
+                <span>logout</span>
+            </a>
+            {% endif %}
         </div>
     </div>
 
