--- a/accountapp/templates/accountapp/create.html
+++ b/accountapp/templates/accountapp/create.html
@@ -1,17 +1,27 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
+
 
 {% block content %}
 
-  <div style="text-align: center">
+  <div style="text-align: center; margin:4rem auto; max-width: 500px">
+    <div class="mb-4">
+      <h4>
+          Sign up
+      </h4>
+    </div>
       <!--form태그의 내부에는 요청을 보내는 url을 작성-->
       <!--accountapp 내부의 urls.py에서 name='create'라는 라우트로 요청해라-->
       <!--views.py에서 정한 form_class를 {{ form }}으로 사용하면, 귀찮게 html 코드
       안 써도 됨-->
+    <div class="mb-4">
       <form action="{% url 'accountapp:create' %}" method="post">
           {% csrf_token %}
-          {{ form }}
-          <input type="submit" class="btn btn-primary">
+<!--          {{ form }}-->
+          {% bootstrap_form form %}
+          <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
       </form>
+    </div>
   </div>
 
 {% endblock %}
