--- a/templates/header.html
+++ b/templates/header.html
@@ -9,13 +9,18 @@
             <span>nav1</span>
             <span>nav2</span>
             <span>nav3</span>
-            <!--로그인이 되어 있는 경우와 로그인 안 되어있는 경우-->
-            <!--get방식으로 next의 값을 넘김. 즉, 로그인 또는 로그아웃 후에 다시 넘어갈 경로를 넘김-->
+            <!--###로그인이 되어 있는 경우와 로그인 안 되어있는 경우###-->
+            <!--1. get방식으로 next의 값을 넘김. 즉, 로그인 또는 로그아웃 후에 다시 넘어갈 경로를 넘김-->
+            <!--2.(1). login이 되어 있다면 detail을 볼 수 있는 링크 설정-->
+            <!--2.(2). pk로 현재 user의 pk를 받아서 url의 pk에 값으로 넣어줌-->
             {% if not user.is_authenticated %}
             <a href="{% url 'accountapp:login' %}?next={{ request.path }}">
                 <span>login</span>
             </a>
             {% else %}
+            <a href="{% url 'accountapp:detail' pk=user.pk %}">
+                <span>MyPage</span>
+            </a>
             <a href="{% url 'accountapp:logout' %}?next={{ request.path }}">
                 <span>logout</span>
             </a>
