--- a/accountapp/templates/accountapp/delete.html
+++ b/accountapp/templates/accountapp/delete.html
@@ -10,7 +10,7 @@
       </h4>
     </div>
     <div class="mb-4">
-      <form action="{% url 'accountapp:delete' pk=user.pk%}" method="post">
+      <form action="{% url 'accountapp:delete' pk=target_user.pk%}" method="post">
           {% csrf_token %}
           <input type="submit" class="btn btn-danger rounded-pill col-6 mt-3">
       </form>
