--- a/accountapp/templates/accountapp/update.html
+++ b/accountapp/templates/accountapp/update.html
@@ -11,7 +11,7 @@
       </h4>
     </div>
     <div class="mb-4">
-      <form action="{% url 'accountapp:update' pk=user.pk %}" method="post">
+      <form action="{% url 'accountapp:update' pk=target_user.pk %}" method="post">
           {% csrf_token %}
           {% bootstrap_form form %}
           <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
