--- a/templates/header.html
+++ b/templates/header.html
@@ -28,7 +28,7 @@
                 <span>MyPage</span>
             </a>
             <a href="{% url 'accountapp:logout' %}?next={{ request.path }}">
-                <span>logout</span>
+                <span>Logout</span>
             </a>
             {% endif %}
 
