--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -68,6 +68,12 @@
       </div>
     </div>
 
+    <div style="text-align: center;">
+      <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
+        Create Article
+      </a>
+    </div>
+
 <!--static에서 js폴더 아래의 -->
     <script src="{% static 'js/magicgrid.js' %}"></script>
 
