django course 36 commit

--- a/articleapp/templates/articleapp/delete.html
+++ b/articleapp/templates/articleapp/delete.html
@@ -10,7 +10,7 @@
           Are you sure you want to delete "{{ target_article.title }}" ?
       </h3>
       <img src="{{ target_article.image.url }}" alt=""
-           style="height: 13rem; width: 13rem; margin: 0.5rem;">
+           style="width: 40%; height: 40%; margin: 0.5rem;">
 
     </div>
     <div class="mb-4">
