--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -4,23 +4,45 @@
 {% block content %}
 
   <div>
-    <div style="text-align: center; max-width: 500px; margin: 4rem auto">
-     <h1>
-         {{ target_article.title }}
-     </h1>
+    <div style="text-align: center; max-width: 700px;
+                font-family: NanumSquareR; margin: 4rem auto">
+        <h1>
+            {{ target_article.title }}
+        </h1>
 
-        <img src="{{ target_article.image.url }}" alt="">
+        <h3 style="font-family: NanumSquareL">
+            By
+        </h3>
+        <h3 style="font-family: NanumSquareB">
+            {{ target_article.writer.profile.nickname }}
+        </h3>
 
-        <p>
+        <hr>
+
+        <img src="{{ target_article.image.url }}" alt=""
+             style="width: 40%; height: 40%;
+                    border-radius: 2rem; margin: 0.5rem;">
+
+        <p style="font-family: Nanum">
             {{ target_article.content }}
         </p>
 
-        <a href="{% url 'articleapp:update' pk=target_article.pk %}">
-            <p>Update Article</p>
-        </a>
-        <a href="{% url 'articleapp:delete' pk=target_article.pk %}">
-            <p>Delete Article</p>
-        </a>
+        {% if target_article.writer == user %}
+            <a href="{% url 'articleapp:update' pk=target_article.pk %}">
+                <h6 style="font-size: 95%"
+                    class="btn btn-dark rounded-pill col-3">
+                    Update Article
+                </h6>
+            </a>
+            <a href="{% url 'articleapp:delete' pk=target_article.pk %}">
+                <h6 style="font-size: 95%"
+                    class="btn btn-danger rounded-pill col-3">
+                    Delete Article
+                </h6>
+            </a>
+        {% endif %}
+
+        <hr>
 
     </div>
 
