--- a/commentapp/templates/commentapp/create.html
+++ b/commentapp/templates/commentapp/create.html
@@ -4,39 +4,45 @@
 
 {% block content %}
 
-  <div style="text-align: center; margin:4rem auto; max-width: 500px">
-    <div class="mb-4">
-      <h4>
-          Comment Create
-      </h4>
-    </div>
-    <div class="mb-4">
-  <!--요청을 보내는 곳을 commentapp:create로 수정-->
-      <form action="{% url 'commentapp:create' %}" method="post">
-          {% csrf_token %}
-          {% bootstrap_form form %}
+    <div style="text-align: center; margin:4rem auto; max-width: 500px">
+        {% if user.is_authenticated %}
+        <div class="mb-4">
+          <h4>
+              Comment Create
+          </h4>
+        </div>
+<!--        <div class="mb-4">-->
+      <!--요청을 보내는 곳을 commentapp:create로 수정-->
+        <form action="{% url 'commentapp:create' %}" method="post">
+            {% csrf_token %}
+            {% bootstrap_form form %}
+
+        {% else %}
+          <h4>
+              Login first to write Comments!
+          </h4>
+
+        {% endif %}
 
       <!--Login이 되어 있을 때만, comment 쓸 수 있게 한다.
       Login 안 되어 있으면 Login하는 창으로 보냄.-->
       <!--Login 안 되어 있어서, Login 하고 다시 comment 쓰는 창으로
       돌아 오게 하기 위해 "?next={{ request.path }}"를 작성해줌-->
 
-          {% if user.is_authenticated %}
-            <input type="submit"
-                   class="btn btn-dark rounded-pill col-6 mt-3">
-          {% else %}
-            <a href="{% url 'accountapp:login' %}?next={{ request.path }}"
-               class="btn btn-dark rounded-pill col-6 mt-3">
-                Login
-            </a>
-          {% endif %}
-      <!--model의 articl 확인을 위한 hidden 타비의 input-->
-      <!--동기화가 되었으므로, create.html에서 동기화 된 article 변수를 사용할 수
-      있게 되므로 name='article_pk'라는 이름의 hidden 타입의 input의 value에 동기화 된
-      articled의 pk를 넣어 서버로 보낼 수 있게 됨-->
-          <input type="hidden" name="article_pk" value="{{ article.pk }}">
-      </form>
-    </div>
+        {% if user.is_authenticated %}
+          <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3;">
+        {% else %}
+          <a href="{% url 'accountapp:login' %}?next={{ request.path }}"
+             class="btn btn-dark rounded-pill col-6 mt-3">
+               Login
+          </a>
+        {% endif %}
+          <!--model의 articl 확인을 위한 hidden 타비의 input-->
+          <!--동기화가 되었으므로, create.html에서 동기화 된 article 변수를 사용할 수
+          있게 되므로 name='article_pk'라는 이름의 hidden 타입의 input의 value에 동기화 된
+          articled의 pk를 넣어 서버로 보낼 수 있게 됨-->
+           <input type="hidden" name="article_pk" value="{{ article.pk }}">
+    </form>
   </div>
 
 {% endblock %}
