--- a/templates/head.html
+++ b/templates/head.html
@@ -5,6 +5,10 @@
 
 <head>
     <meta charset="UTF-8">
+
+    <!--모바일 최적화를 위한 태그-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Pragmatic</title>
 
     <!--BootStrap으로 CSS 갖고 옴-->
