--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -21,7 +21,7 @@
       <!--이미지 추가-->
       <img src="{{ target_user.profile.image.url }}" alt=""
            style="height: 8rem; width:8rem; border-radius: 10rem;
-           margin-bottom: 0.5rem;">
+                  margin-bottom: 0.5rem; object-fit: cover;">
 
       <p style="margin-bottom: 0.1rem;">
         <span style="font-family: 'NanumSquareB'; font-size: 150%">
