--- a/static/base.css
+++ b/static/base.css
@@ -16,6 +16,27 @@
     margin: 2rem 0;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    color: black;
+    text-decoration: none;
+
+}
+
+.pragmatic_header_nav {
+    margin: 0rem 0.5rem;
+}
+
+.pragmatic_header_navbar {
+    margin: 1rem 0;
+}
+
+
+
 
 
 @media screen and (max-width:600px) {
