--- a/templates/header.html
+++ b/templates/header.html
@@ -5,32 +5,36 @@
             <h1 class="pragmatic_logo">Pragmatic</h1>
         </div>
 <!--        2층: 네비게이션 바-->
-        <div>
-            <a href="{% url 'articleapp:list' %}">
+        <div class="pragmatic_header_navbar">
+            <a href="{% url 'articleapp:list' %}" class="pragmatic_header_nav">
                 <span>Articles</span>
             </a>
 
-            <span>nav2</span>
-            <span>nav3</span>
+            <a href="{% url 'projectapp:list' %}" class="pragmatic_header_nav">
+                <span>Projects</span>
+            </a>
+
+
+            <span class="pragmatic_header_nav">nav3</span>
             <!--###로그인이 되어 있는 경우와 로그인 안 되어있는 경우###-->
             <!--1. get방식으로 next의 값을 넘김. 즉, 로그인 또는 로그아웃 후에 다시 넘어갈 경로를 넘김-->
             <!--2.(1). login이 되어 있다면 detail을 볼 수 있는 링크 설정-->
             <!--2.(2). pk로 현재 user의 pk를 받아서 url의 pk에 값으로 넣어줌-->
 
             {% if not user.is_authenticated %}
-            <a href="{% url 'accountapp:create' %}">
+            <a href="{% url 'accountapp:create' %}" class="pragmatic_header_nav">
                 <span>Sign up</span>
             </a>
-            <a href="{% url 'accountapp:login' %}?next={{ request.path }}">
+            <a href="{% url 'accountapp:login' %}?next={{ request.path }}" class="pragmatic_header_nav">
                 <span>login</span>
             </a>
 
 
             {% else %}
-            <a href="{% url 'accountapp:detail' pk=user.pk %}">
+            <a href="{% url 'accountapp:detail' pk=user.pk %}" class="pragmatic_header_nav">
                 <span>MyPage</span>
             </a>
-            <a href="{% url 'accountapp:logout' %}?next={{ request.path }}">
+            <a href="{% url 'accountapp:logout' %}?next={{ request.path }}" class="pragmatic_header_nav">
                 <span>Logout</span>
             </a>
             {% endif %}
