--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -13,11 +13,15 @@
         <h3 style="font-family: NanumSquareL">
             By
         </h3>
-        <h3 style="font-family: NanumSquareB">
-            {{ target_article.writer.profile.nickname }}
-        </h3>
+
+            <h3 style="font-family: NanumSquareB">
+                {{ target_article.writer.profile.nickname }}
+            </h3>
+            <line style="font-size: 95%;">{{ target_article.when }}</line>
+
 
         <hr>
+
 
         <img src="{{ target_article.image.url }}" alt=""
              style="width: 40%; height: 40%;
