--- a/projectapp/templates/projectapp/detail.html
+++ b/projectapp/templates/projectapp/detail.html
@@ -20,8 +20,12 @@
           {{ target_project.description }}
         </h5>
       </div>
-
     </div>
+
+    <div>
+        {% include 'snippets/list_fragment.html' with article_list=object_list %}
+    </div>
+
   </div>
 
 {% endblock %}
