--- a/commentapp/templates/commentapp/delete.html
+++ b/commentapp/templates/commentapp/delete.html
@@ -7,7 +7,7 @@
     <div class="mb-4">
 
       <h3>
-          Are you sure you want to delete <line style="border: 3px solid;">"{{ target_comment.content }}"</line>?
+          Are you sure you want to delete <strong>"{{ target_comment.content }}"</strong>?
       </h3>
     </div>
     <div class="mb-4">
