--- a/templates/snippets/card.html
+++ b/templates/snippets/card.html
@@ -1,6 +1,8 @@
 
 
-
 <div style="text-align: center">
     <img src="{{ article.image.url }}" alt="">
+</div>
+<div style="margin-top: 0.5rem;">
+    {{ article.title }}
 </div>
