--- a/projectapp/templates/projectapp/detail.html
+++ b/projectapp/templates/projectapp/detail.html
@@ -4,7 +4,12 @@
 {% block content %}
 
   <div>
-    <div style="text-align: center; max-width: 500px; margin: 4rem auto">
+    <h5 style="font-size: 110%; margin-top: 4rem;
+                 text-align: center;">
+          {{ target_project.created_at }}
+    </h5>
+
+    <div style="text-align: center; max-width: 500px; margin: 2rem auto">
 
         <!--이미지 추가-->
       <img src="{{ target_project.image.url }}" alt=""
@@ -12,13 +17,32 @@
            margin-bottom: 2rem; object-fit: cover;">
 
       <div>
-        <h2 style="font-family: 'NanumSquareB'; font-size: 150%">
+        <h1 style="font-family: 'NanumSquareB';">
           {{ target_project.title }}
-        </h2>
+        </h1>
 
-        <h5 style="margin-bottom: 3rem;">
+        <h3 style="margin-bottom: 1.5rem;">
           {{ target_project.description }}
-        </h5>
+        </h3>
+
+        <div class="text-center;">
+          {% if user.is_authenticated %}
+            {% if not subscription %}
+              <a href="{% url 'subscribeapp:subscribe' %}?project_pk={{ target_project.pk }}"
+                 style="font-family: 'NanumSquareEB'; width: 40%; height: 40%; margin-bottom: 2rem;"
+                 class="btn btn-primary rounded-pill px-4">
+                 Follow
+              </a>
+            {% else %}
+              <a href="{% url 'subscribeapp:subscribe' %}?project_pk={{ target_project.pk }}"
+                 style="font-family: 'NanumSquareEB'; width: 40%; height: 40%; margin-bottom: 2rem; color;"
+                 class="btn btn-secondary rounded-pill px-4 text-dark">
+                 Following
+              </a>
+            {% endif %}
+          {% endif %}
+        </div>
+
       </div>
     </div>
 
