--- a/articleapp/templates/articleapp/create.html
+++ b/articleapp/templates/articleapp/create.html
@@ -3,6 +3,10 @@
 
 
 {% block content %}
+<!--WYSIWYG-->
+<script src="//cdn.jsdelivr.net/npm/medium-editor@5.23.2/dist/js/medium-editor.min.js"></script>
+<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@5.23.2/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
+
 
   <div style="text-align: center; margin:4rem auto; max-width: 500px">
     <div class="mb-4">
@@ -23,6 +27,9 @@
       </form>
     </div>
   </div>
+
+<!--WYSIWYG-->
+<script>var editor = new MediumEditor('.editable');</script>
 
 {% endblock %}
 
