django small adjustmetns like material icons 45 commit

--- a/accountapp/templates/accountapp/delete.html
+++ b/accountapp/templates/accountapp/delete.html
@@ -5,8 +5,11 @@
 
   <div style="text-align: center; margin:4rem auto; max-width: 500px">
     <div class="mb-4">
-      <h4>
+      <h4 style='font-family: NanumSquareeB'>
           Delete Account
+      </h4>
+      <h4>
+          Are you sure you want to delete your Account?
       </h4>
     </div>
     <div class="mb-4">
