--- a/templates/head.html
+++ b/templates/head.html
@@ -21,6 +21,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
+    <!--Google Material Icons-->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+
+
     <!--DEFAULT CSS LINK-->
 
     <!--base.csss에 해당하는 경로를 rendering하여 브랑저에 넘기고, text/css파일을 template에서 사용 가능 하게 됨-->
