--- a/accountapp/templates/accountapp/update.html
+++ b/accountapp/templates/accountapp/update.html
@@ -6,7 +6,7 @@
 
   <div style="text-align: center; margin:4rem auto; max-width: auto">
     <div class="mb-4">
-      <h4>
+      <h4 style='font-family: NanumSquareeB'>
           Change Information
       </h4>
     </div>
