45+small adjustments commit

--- a/articleapp/templates/articleapp/create.html
+++ b/articleapp/templates/articleapp/create.html
@@ -23,7 +23,8 @@
           {% csrf_token %}
 <!--          {{ form }}-->
           {% bootstrap_form form %}
-          <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
+          <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3"
+                 value="Submit">
       </form>
     </div>
   </div>
