--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,9 @@
     <div class="pragmatic_header">
 <!--        1층: 제목-->
         <div>
-            <h1 class="pragmatic_logo">Pragmatic</h1>
+            <a href="{% url 'home' %}">
+                <h1 class="pragmatic_logo">Pragmatic</h1>
+            </a>
         </div>
 <!--        2층: 네비게이션 바-->
         <div class="pragmatic_header_navbar">
