--- a/accountapp/templates/accountapp/update.html
+++ b/accountapp/templates/accountapp/update.html
@@ -10,14 +10,15 @@
           Change Information
       </h4>
     </div>
-    <div class="mb-4">
+    <div class="m-4">
       <form action="{% url 'accountapp:update' pk=target_user.pk %}" method="post">
           {% csrf_token %}
           {% bootstrap_form form %}
-          <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
+          <input type="submit" class="btn btn-dark rounded-pill col-2 mt-5">
       </form>
     </div>
   </div>
+
 
 {% endblock %}
 
