--- a/commentapp/templates/commentapp/create.html
+++ b/commentapp/templates/commentapp/create.html
@@ -31,7 +31,8 @@
 
         {% if user.is_authenticated %}
           <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3;"
-                 style="margin: 2rem;">
+                 style="margin: 2rem;"
+                 value="Submit">
         {% else %}
           <a href="{% url 'accountapp:login' %}?next={{ request.path }}"
              class="btn btn-dark rounded-pill col-6 mt-3">
