added the profile link for the users who didn't create the profile

--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -53,7 +53,7 @@
           </a>
           {% else %}
           <h2>
-            This user didn't create a Nickname!
+              This user didn't create the profile!
           </h2>
           {% endif %}
       {% endif %}
