--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -25,9 +25,10 @@
         </a>
 
         {% else %}
-        <h3 style="font-family: NanumSquareB">
-            This user didn't create the profile!
-        </h3>
+        <a href="{% url 'accountapp:detail' pk=target_article.writer.pk %}">
+            <h3 style="font-family: NanumSquareB">
+                This user didn't create the profile!
+            </h3>
         {% endif %}
 
 
