--- a/projectapp/templates/projectapp/detail.html
+++ b/projectapp/templates/projectapp/detail.html
@@ -13,7 +13,7 @@
 
         <!--이미지 추가-->
       <img src="{{ target_project.image.url }}" alt=""
-           style="height: 12rem; width:12rem; border-radius: 20rem;
+           style="height: 16rem; width: 16rem; border-radius: 1rem;
            margin-bottom: 2rem; object-fit: cover;">
 
       <div>
@@ -24,6 +24,19 @@
         <h3 style="margin-bottom: 1.5rem;">
           {{ target_project.description }}
         </h3>
+
+        {% if target_project.writer %}
+        <div style="margin-top: 5rem;">
+          <line>Created by</line>
+          <a href="{% url 'accountapp:detail' pk=target_project.writer.pk %}">
+              <h5 style="font-family: NanumSquareB; margin-bottom: 1rem;">
+                  {{ target_project.writer.profile.nickname }}
+              </h5>
+          </a>
+          {% endif %}
+        </div>
+
+
 
         <div class="text-center;">
           {% if user.is_authenticated %}
