edited header.html login -> Login

--- a/templates/header.html
+++ b/templates/header.html
@@ -30,7 +30,7 @@
                 <span>Sign up</span>
             </a>
             <a href="{% url 'accountapp:login' %}?next={{ request.path }}" class="pragmatic_header_nav">
-                <span>login</span>
+                <span>Login</span>
             </a>
 
 
