--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,6 +8,6 @@
         </div>
 <!--하-->
         <div style="margin-top: 1rem">
-            <h6 class="pragmatic_logo">Pragmatic</h6>
+            <h3 class="pragmatic_logo">Kim Land</h3>
         </div>
     </div>
