--- a/templates/head.html
+++ b/templates/head.html
@@ -9,7 +9,7 @@
     <!--모바일 최적화를 위한 태그-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Pragmatic</title>
+    <title>Kim Land</title>
 
     <!--BootStrap으로 CSS 갖고 옴-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
