--- a/templates/header.html
+++ b/templates/header.html
@@ -3,21 +3,21 @@
 <!--        1층: 제목-->
         <div>
             <a href="{% url 'home' %}">
-                <h1 class="pragmatic_logo">Pragmatic</h1>
+                <h1 class="pragmatic_logo">Kim Land</h1>
             </a>
         </div>
 <!--        2층: 네비게이션 바-->
         <div class="pragmatic_header_navbar">
             <a href="{% url 'articleapp:list' %}" class="pragmatic_header_nav">
-                <span>Articles</span>
+                <span style="font-size: 1.2rem;">Articles</span>
             </a>
 
             <a href="{% url 'projectapp:list' %}" class="pragmatic_header_nav">
-                <span>Projects</span>
+                <span style="font-size: 1.2rem;">Projects</span>
             </a>
 
             <a href="{% url 'subscribeapp:list' %}" class="pragmatic_header_nav">
-                <span>Subscription</span>
+                <span style="font-size: 1.2rem;">Subscription</span>
             </a>
 
             <!--###로그인이 되어 있는 경우와 로그인 안 되어있는 경우###-->
@@ -27,19 +27,19 @@
 
             {% if not user.is_authenticated %}
             <a href="{% url 'accountapp:create' %}" class="pragmatic_header_nav">
-                <span>Sign up</span>
+                <span style="font-size: 1.2rem;">Sign up</span>
             </a>
             <a href="{% url 'accountapp:login' %}?next={{ request.path }}" class="pragmatic_header_nav">
-                <span>Login</span>
+                <span style="font-size: 1.2rem;">Login</span>
             </a>
 
 
             {% else %}
             <a href="{% url 'accountapp:detail' pk=user.pk %}" class="pragmatic_header_nav">
-                <span>MyPage</span>
+                <span style="font-size: 1.2rem;">MyPage</span>
             </a>
             <a href="{% url 'accountapp:logout' %}?next={{ request.path }}" class="pragmatic_header_nav">
-                <span>Logout</span>
+                <span style="font-size: 1.2rem;">Logout</span>
             </a>
             {% endif %}
         </div>
