--- a/accountapp/templates/accountapp/login.html
+++ b/accountapp/templates/accountapp/login.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
+{% load socialaccount %}
 
 
 {% block content %}
@@ -12,10 +13,16 @@
                 {% csrf_token %}
 
                 {% bootstrap_form form %}
-                <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
+                <input type="submit" class="btn btn-dark rounded-pill col-6 mt-4"
+                       value="Submit">
             </form>
         </div>
     </div>
+
+    <div style="text-align: center; max-width: 500px; margin: 2rem auto;">
+        <a href="{% provider_login_url 'google' %}">Google Login</a>
+    </div>
+
 
 {% endblock %}
 
