--- a/accountapp/templates/accountapp/login.html
+++ b/accountapp/templates/accountapp/login.html
@@ -20,7 +20,14 @@
     </div>
 
     <div style="text-align: center; max-width: 500px; margin: 2rem auto;">
-        <a href="{% provider_login_url 'google' %}">Google Login</a>
+        <form action="{% provider_login_url 'google' %}" method="post">
+            {% csrf_token %}
+                <button type="submit" class="btn btn-outline-dark">
+                    <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in"
+                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
+                        Sign in with Google
+                </button>
+        </form>
     </div>
 
 
