--- a/templates/head.html
+++ b/templates/head.html
@@ -25,6 +25,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
 
 
+    <!--LOGIN WITH GOOGLE-->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans"/>
+
+
     <!--DEFAULT CSS LINK-->
 
     <!--base.csss에 해당하는 경로를 rendering하여 브랑저에 넘기고, text/css파일을 template에서 사용 가능 하게 됨-->
